<resources>
    <string name="app_name">GroceryApp</string>

    <string name="orders">Orders</string>
    <string name="checkout">Checkout</string>
    <string name="checkoutButton">CHECKOUT</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="removeButton">REMOVE</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="login_as_owner_button">Login as Owner</string>
    <string name="login_as_customer_button">Login as Customer</string>
    <string name="Login">Login</string>
    <string name="signup">Sign up</string>
    <string name="role">Role</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_display_name">Enter Display Name</string>
    <string name="stores">Stores</string>
    <string name="button_pending_orders">Pending Orders</string>
    <string name="button_new_item">Create New Item</string>
    <string name="checkbox_mark_complete">Mark Order as Complete</string>
    <string name="button_checkout">Checkout</string>
    <string name="table_item">Item</string>
    <string name="table_quantity">Quantity</string>
    <string name="button_orders">Orders</string>
    <string name="add_item">Add Item</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="new_brand">New Brand</string>
    <string name="new_name">New Name</string>
    <string name="new_item_title">New Item</string>
    <string name="public_name">Display Name</string>
    <string name="past_orders">Past Orders</string>
    <string-array name="User_Dropdown">
        <item>Owner</item>
        <item>Customer</item>
    </string-array>

</resources>