<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/App_grey"
    tools:context=".CreateNewItem">

    <EditText
        android:id="@+id/editTextTextNewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/new_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:singleLine="true"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextNewBrand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/new_brand"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:singleLine="true"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextNewName" />

    <EditText
        android:id="@+id/editTextTextPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/price"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:singleLine="true"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextNewBrand" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/open_sans_bold"
        android:singleLine="true"
        android:text="@string/new_item_title"
        android:textColor="#38761d"
        android:textSize="34sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#38761d"
        android:fontFamily="@font/open_sans_bold"
        android:onClick="CreateNewItemButton"
        android:text="@string/add_item"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPrice"
        tools:fontFamily="@font/open_sans_bold"
        tools:ignore="SpeakableTextPresentCheck"
        tools:textSize="24sp" />

</androidx.constraintlayout.widget.ConstraintLayout>