<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/App_grey"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/GroceryIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_grocery" />

    <EditText
        android:id="@+id/Login_Username_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:singleLine="true"
        android:text="@string/Username"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GroceryIcon" />

    <EditText
        android:id="@+id/Login_Password_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:singleLine="true"
        android:text="@string/Password"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GroceryIcon" />

    <Button
        android:id="@+id/Login_Customer_Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/open_sans"
        android:padding="10dp"
        android:text="@string/login_as_customer_button"
        android:textColor="#ffffff"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Password_EditText" />

    <Button
        android:id="@+id/Login_Owner_Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/open_sans"
        android:padding="10dp"
        android:text="@string/login_as_owner_button"
        android:textColor="#ffffff"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Customer_Button" />

    <Button
        android:id="@+id/Login_Signup_Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/open_sans"
        android:padding="10dp"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Owner_Button"
        app:layout_constraintVertical_bias="0.035"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/Login_Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/Login"
        android:textColor="#38761D"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@id/GroceryIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

</androidx.constraintlayout.widget.ConstraintLayout>