<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/App_grey"
    android:padding="16dp"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/Signup_Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/signup"
        android:textColor="@color/App_green"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Signup_Icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Signup_Heading"
        app:srcCompat="@drawable/ic_sign_up" />

    <TextView
        android:id="@+id/Signup_Role_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/role"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Signup_Icon"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/Signup_Username_Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/Username"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Signup_Role_TextView" />

    <TextView
        android:id="@+id/Signup_Password_Textview"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/Password"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Signup_Username_Textview" />

    <TextView
        android:id="@+id/signup_Password_Textview2"
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/public_name"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Signup_Password_Textview"
        app:layout_constraintVertical_bias="0.082" />

    <EditText
        android:id="@+id/Signup_PublicName_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/signup_Password_Textview2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toEndOf="@+id/signup_Password_Textview2"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Signup_Password_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Signup_Password_Textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toEndOf="@+id/Signup_Password_Textview"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Signup_Username_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Signup_Username_Textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toEndOf="@+id/Signup_Password_Textview"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/Signup_UserDropdown"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:entries="@array/User_Dropdown"
        app:layout_constraintBottom_toTopOf="@+id/Signup_Username_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Signup_Role_TextView"
        app:layout_constraintTop_toBottomOf="@+id/Signup_Icon"
        app:layout_constraintVertical_bias="0.682" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Signup_Signup_Button"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/App_green"
        android:fontFamily="@font/open_sans_bold"
        android:onClick="SignUpSignUpButton"

        android:text="@string/signup"
        android:typeface="sans"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_Password_Textview2" />

</androidx.constraintlayout.widget.ConstraintLayout>